fix: update z-index (#897)

--- a/src/components/bene-dashboard/views/clinical/date-filter.component.css
+++ b/src/components/bene-dashboard/views/clinical/date-filter.component.css
@@ -63,7 +63,7 @@
     position: fixed;
     width: 59.8%;
     background-color: var(--white-100);
-    z-index: 10;
+    z-index: 1;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
     padding: 0.2rem;
     left: 20% ;
